--- a/chocolate-frontend/css/style.css
+++ b/chocolate-frontend/css/style.css
@@ -1,3 +1,42 @@
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+nav{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    min-height: 8vh;
+    font-family: Arial, Helvetica,sans-serif;
+    background-color: rgb(133, 88, 88);
+}
+
+.logo{
+    color: rgb(218, 214, 214);
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    font-size: 15px;
+
+}
+
+.nav-links{
+    display: flex;
+    width: 40%;
+    justify-content: space-around;
+}
+
+.nav-links a {
+    text-decoration: none;
+    letter-spacing: 3px;
+    font-weight: bold;
+    color: rgb(218, 214, 214);
+}
+
+.nav-links li {
+    list-style-type: none;
+}
 #chocolates-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -7,12 +46,14 @@
 .chocolate-card{
     height: 150px; 
     width:  auto;
+    margin: 60px;
   }
 
 img {
       height: 350px;
       width: 250px;
       border-radius: 5px 5px 0 0;
+      
 
   }
 
