--- a/chocolate-frontend/css/style.css
+++ b/chocolate-frontend/css/style.css
@@ -84,10 +84,16 @@ img:hover{
     transform: scale(1.15)
 }
 
-  p {
+p  {
       font-weight: bold;
       margin-top: 10px;
   }
+
+input[type=text] {
+    margin:10px 0;
+    border-radius:10px;
+    box-shadow:0 0 15px 4px rgba(139, 139, 139, 0.06)
+  } 
 
 .container{
     overflow: auto;
