add destroy to controller

--- a/chocolate-frontend/css/style.css
+++ b/chocolate-frontend/css/style.css
@@ -68,8 +68,21 @@ nav{
     grid-auto-rows: minmax(450px, auto);
   }
 
-  
+
 .chocolate-card{
+    height: 150px; 
+    width:  auto;
+    margin: 60px;
+  }
+
+#cakes-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+    grid-auto-rows: minmax(450px, auto);
+  }
+
+.back-card{
     height: 150px; 
     width:  auto;
     margin: 60px;
