--- a/chocolate-frontend/css/style.css
+++ b/chocolate-frontend/css/style.css
@@ -62,10 +62,34 @@ nav{
     flex-direction: row;
 } */
 #chocolates-container {
+    margin-top: 20px;
+    margin-left: 20px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 10px;
     grid-auto-rows: minmax(450px, auto);
+  }
+
+#chocolates-container button{
+    
+    
+    transition-duration: 0.4s;
+    font-weight: 100px;
+    font-size: large;
+    font-family: Arial, Helvetica,sans-serif;
+
+      
+      
+    
+    border: 2px solid #1113112f;
+
+  }
+
+  #chocolates-container button:hover{
+        background-color: #d4d4d4; /* Green */
+        color: white;
+    
+
   }
 
 
@@ -75,12 +99,7 @@ nav{
     margin: 60px;
   }
 
-#cakes-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 10px;
-    grid-auto-rows: minmax(450px, auto);
-  }
+
 
 .back-card{
     height: 150px; 
